--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="all">
-		<img src="AMLogos/midhq.png">
+		<div class="title">A:M</div>
 		<div class="headlinks">
 		<a href="artists">ARTISTS</a>
 		<a href="https://twitter.com/antemeridiem__">TWITTER</a>
