--- a/artists.html
+++ b/artists.html
@@ -1,4 +1,5 @@
 <html>
+	<!-- Coding by freferi -->
 <head>
 <title>ante meridiem</title>
 <link rel="stylesheet" style="css/text" href="stylesheet.css">
