--- a/bedstuck.html
+++ b/bedstuck.html
@@ -16,7 +16,7 @@
     <div class="usertitle">Freferi</div>
     <div class="tagline">Puts too much reverb on things</div>
     <div class="bio">
- Program boy, art boy, game boy
+ Program boy, art boy, game boy. Made this website
     </div>
     <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/247564663&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
 </div>
