--- a/artists.html
+++ b/artists.html
@@ -24,8 +24,8 @@ function open() {
 	<div class="artistoverlay">Vorecannibal</div>
 		<img src="images/photo________by_spacejam11s-da0k6wg.jpg" height="20%">
 	</a>
-	<a href="freferi" class="a4">
-	<div class="artistoverlay">Freferi</div>
+	<a href="bedstuck" class="a4">
+	<div class="artistoverlay">Bedstuck</div>
 		<img src="images/dan.jpg" height="20%">
 	</a>
 </div>
