--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-	<!-- Coding by freferi -->
+	<!-- Coding by bedstuck -->
 <head>
 <title>ante meridiem</title>
 <link rel="stylesheet" style="css/text" href="stylesheet.css">
