--- a/bedstuck.html
+++ b/bedstuck.html
@@ -13,7 +13,7 @@
 
 <div class="wrapper indiv">
     <img src="images/dan.jpg" class="icon">
-    <div class="usertitle">Freferi</div>
+    <div class="usertitle">Bedstuck</div>
     <div class="tagline">Puts too much reverb on things</div>
     <div class="bio">
  Program boy, art boy, game boy. Made this website
