--- a/syrup.html
+++ b/syrup.html
@@ -16,7 +16,7 @@
     <div class="usertitle">Syrup</div>
     <div class="tagline">Founder of Antemeridiem</div>
     <div class="bio">
-  Mysterious idiot making independent experimental music. 
+  Mysterious idiot making independent experimental music. Real life drone.
     </div>
     <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=3290979191/size=large/bgcol=000000/linkcol=ff0000/tracklist=false/artwork=small/transparent=true/" seamless><a href="http://amlabel.bandcamp.com/album/left-ep">left EP by syrup</a></iframe>
 </div>
