--- a/vitativ.html
+++ b/vitativ.html
@@ -18,7 +18,7 @@
     <div class="bio">
     Up and coming 15 y/o producer with a passion for creating, sharing, and listening to all sorts of music. ❤
     </div>
-    <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=3784325190/size=large/bgcol=333333/linkcol=e32c14/tracklist=false/artwork=small/transparent=true/" seamless><a href="http://vitativ.bandcamp.com/album/you-get-the-idea-ep">you get the idea (ep) by vitativ</a></iframe>
+    <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=2373938518/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/artwork=small/transparent=true/" seamless><a href="http://amlabel.bandcamp.com/album/fusillade-of-roses">FUSILLADE OF ROSES by Vitativ</a></iframe>
 </div>
 
 </body>
