--- a/vorecannibal.html
+++ b/vorecannibal.html
@@ -22,7 +22,7 @@
                 bizarre and violent flow tears through noisey landscape after noisey landscape, featuring his own beats
                 as well as beats crafted by the likes of Equinox7, JamKamme and Enterfant.
     </div>
-    <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/271652623&amp;color=000000&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+    <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=1105826119/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/artwork=small/transparent=true/" seamless><a href="http://amlabel.bandcamp.com/album/smoke-and-ink">Smoke and Ink by Vorecannibal</a></iframe>
 </div>
 
 </body>
