--- a/vitativ.html
+++ b/vitativ.html
@@ -18,7 +18,7 @@
     <div class="bio">
     Up and coming 15 y/o producer with a passion for creating, sharing, and listening to all sorts of music. ❤
     </div>
-    <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=2373938518/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/artwork=small/transparent=true/" seamless><a href="http://amlabel.bandcamp.com/album/fusillade-of-roses">FUSILLADE OF ROSES by Vitativ</a></iframe>
+    <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=1105826119/size=large/bgcol=333333/linkcol=0f91ff/tracklist=false/artwork=small/transparent=true/" seamless><a href="http://amlabel.bandcamp.com/album/smoke-and-ink">Smoke and Ink by Vorecannibal</a></iframe>
 </div>
 
 </body>
