--- a/vitativ.html
+++ b/vitativ.html
@@ -14,7 +14,7 @@
 <div class="wrapper indiv">
     <img src="images/vitativ_icon.jpg" class="icon">
     <div class="usertitle">Vitativ</div>
-    <div class="tagline">Vitativ tagline</div>
+    <div class="tagline">You want it, I got it.</div>
     <div class="bio">
     Up and coming 15 y/o producer with a passion for creating, sharing, and listening to all sorts of music. ❤
     </div>
