--- a/syrup.html
+++ b/syrup.html
@@ -14,7 +14,7 @@
 <div class="wrapper indiv">
     <img src="images/syrup_icon.jpg" class="icon">
     <div class="usertitle">Syrup</div>
-    <div class="tagline">Founder of Antemeridiem</div>
+    <div class="tagline">Founder of Ante Meridiem</div>
     <div class="bio">
   Mysterious idiot making independent experimental music. Real life drone.
     </div>
