--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 		<div class="headlinks">
 		<a href="artists">ARTISTS</a>
 		<a href="https://twitter.com/antemeridiem__">TWITTER</a>
-		<a href="https://amlabel.bandcamp.com">MUSIC</a>    
+		<a href="https://amlabel.bandcamp.com">MUSIC</a>
+		<a href="https://discord.gg/HzVchp8">DISCORD</a>
 		</div>
 	</div>
 </body>
